# ask

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  setup.sh
.claude/commands/: init.md
src/ask/: __init__.py  cli.py  config.py  hardware.py  model_discovery.py  model_manager.py  models.py  router.py
src/ask/model_profiles/: tier_16gb.yaml  tier_32gb.yaml  tier_8gb.yaml
